# CompetencyWizard

./: .gitignore  README.md  __init__.py  ai_chat.py  config.example.toml  excel_exporter.py  gap_analyzer.py  logger.py  main.py  paper_draft.md  pdf_parser_v2.py  pyproject.toml  test_cases.txt  wizard_rag.py  wizard_ui.py
data/parsed_json_v2/: 3D列印積層製造工程師-職能基準.json  3D列印設備配修人員-職能基準.json  3D珠寶設計人員-職能基準.json  AIoT應用工程師-職能基準.json  AI應用規劃師-職能基準.json  AI標註人員-職能基準.json  AI演算法工程人員-職能基準.json  AI演算法應用工程人員-職能基準.json  AI詠唱人員-職能基準.json  CNC折床技術人員-職能基準.json  CNC折床技術助理-職能基準.json  CNC車床技術人員-職能基準.json  CNC車床技術助理-職能基準.json  CNC銑床、車床程式設計人員-職能基準.json  CNC銑床技術人員-職能基準.json  CNC銑床技術助理-職能基準.json  FAE工程人員-職能基準.json  LED光學設計工程師-職能基準.json  LED照明工程師-職能基準.json  PCBA維修技術人員-職能基準.json  PCBA維修技術助理-職能基準.json  PCB佈局工程人員-職能基準.json  PCB佈局工程助理-職能基準.json  PCB前製程生產製造操作人員-職能基準.json  PCB品檢員-職能基準.json  PCB後製程生產製造操作人員-職能基準.json  RF研發工程師-職能基準.json  SEO網站優化工程人員-職能基準.json  VR_AR程式設計人員-職能基準.json  XR互動多媒體數位內容開發人員-職能基準.json  XR穿戴設備韌體設計人員-職能基準.json  《歷史資料》傳統建築修復小木作技術工匠（三級）-職能基準.json  《歷史資料》傳統建築修復小木作技術工匠（四級）-職能基準.json  《歷史資料》傳統漢式建築修復大木作技術工匠（三級）-職能基準.json  《歷史資料》傳統漢式建築修復大木作技術工匠（四級）-職能基準.json  《歷史資料》傳統漢式建築修復大木作技術與管理工匠（五級）-職能基準.json  《歷史資料》傳統灰作匠師-職能基準.json  《歷史資料》化工製程工程師-職能基準.json  《歷史資料》化工製程設計工程師-職能基準.json  《歷史資料》古蹟修復品質管理人員-職能基準.json  (+868 more)
